--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "barryvdh/laravel-debugbar": "^3.5",
         "bensampo/laravel-enum": "^3.2",
         "doctrine/dbal": "^3.0",
         "fideloper/proxy": "^4.4",
